# jti-promotions-scheduling-poc

./: .gitignore  CLAUDE.md  Makefile
backend/: .coverage  .env.example  pyproject.toml  requirements.txt  setup.cfg
backend/api/: urls.py  views.py
backend/config/: settings.py  urls.py
backend/data_integration/: admin.py  models.py  tests.py  views.py
backend/data_integration/importers/: metrics.py  pos.py  promoters.py
backend/data_integration/migrations/: 0001_initial.py
backend/data_integration/sample_data/: period_2026-04-01_2026-04-30_previous_year_metrics.csv  sample_pos.csv  sample_promoters.csv
backend/data_integration/templates/admin/data_integration/datasynclog/: change_list.html
backend/data_integration/tests/: test_import_metrics.py  test_import_pos.py  test_import_promoters.py  utils.py
backend/metrics/: admin.py  models.py  tests.py  views.py
backend/metrics/migrations/: 0001_initial.py
backend/scheduling/: admin.py  ai.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/scheduling/ai/: __init__.py  _client.py  _generate.py  _prompts.py
backend/scheduling/fixtures/: initial_data.json
backend/scheduling/migrations/: 0001_initial.py  0003_add_score_to_schedule.py
backend/scheduling/tests/: __init__.py  _helpers.py  test_export.py  test_generate.py  test_import.py  test_pos_promoter.py  test_publish.py  test_schedule.py
backend/scheduling/views/: __init__.py  _generate.py  _helpers.py  _pos.py  _publish.py  _schedule.py  _transfer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
(+12 files in other folders)
